It works now on the live server (not on live hosting though)

--- a/experience.html
+++ b/experience.html
@@ -4,82 +4,99 @@
     <title>Experience</title>
     <link rel="stylesheet" type="text/css" href="experience_style.css" />
   </head>
-
   <body>
     <div class="background-container"></div>
 
     <div class="black-bar"></div>
 
     <p class="home">
-      <a class="home-link" href="./index.html">Home</a>
+      <a class="home-link" href="index.html">Home</a>
     </p>
 
     <p class="projects">
-      <a class="projects-link" href="./projects.html">Projects</a>
+      <a class="projects-link" href="projects.html">Projects</a>
     </p>
 
     <p class="experience">
-      <a class="experience-link" href="./experience.html">Experience</a>
+      <a class="experience-link" href="experience.html">Experience</a>
     </p>
 
     <div class="top-container">
-    <div class="education-container">
-      <div class="title">Education</div>
-      <h1>Clemson University</h1>
-      <p class="jobs">
-        Expected Graduation: Dec 10, 2025<br />
-        Major: Computer science<br />
-        Degree: Bachelor of Science<br />
-        <br />
-      </p>
-    </div>
+      <div class="education-container">
+        <div class="title">Education</div>
+        <h1>Clemson University</h1>
+        <p class="jobs">
+          Degree: Bachelor of Science in Computer Science<br />
+          Minor: Business Administration<br />
+          Expected Graduation: May 2025<br />
+          GPA: 3.35<br />
+        </p>
+      </div>
 
-    <div class="skills-container">
-      <h1>Skills</h1>
-      <p class="skills-text">
-        • Java&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Microsoft 36<br />
-        • C/C++&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Linux<br />
-        • HTML&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Python<br />
-        • CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• Adobe Lighroom<br />
-        <br />
-      </p>
+      <div class="skills-container">
+        <h1>Skills</h1>
+        <p class="skills-text">
+          <strong>Languages:</strong> Python, C/C++, Java, HTML, CSS, JavaScript, React<br />
+          <strong>Software:</strong> Microsoft 360, Visual Studio Code, Postman, AWS, Flask, NodeJS, NextJS<br />
+          <strong>Hard Skills:</strong> Unit Testing, OOP, Full Stack Development, REST API<br />
+          <strong>Soft Skills:</strong> Leadership, Communication, Teamwork, Creativity<br />
+        </p>
+      </div>
     </div>
-  </div>
 
     <div class="experience-container">
       <div class="job-experience">
-        <h1>Work Experiece</h1>
+        <h1>Work Experience</h1>
+
+        <h3 class="job-title">Team Leader - Arccos</h3>
+        <p class="jobs">
+          Clemson, South Carolina | August 2024 – December 2024<br />
+          • Collected and processed public source satellite imagery using a custom-built API to enhance AI-driven golf course mapping.<br />
+          • Integrated AI models to identify and segment course elements, including fairways and greens.<br />
+          • Built a Flask-based backend and user-friendly frontend to visualize results on interactive maps.<br />
+        </p>
+
+        <h3 class="job-title">Undergraduate Researcher - Conversational UX/AI Research</h3>
+        <p class="jobs">
+          Clemson, South Carolina | August 2024 – December 2024<br />
+          • Built a custom AI model using OpenAI's API, enhancing conversational context management.<br />
+          • Conducted research on conversational UX for improved AI interfaces.<br />
+          • Published papers and presented research on AI applications in user engagement.<br />
+        </p>
+
+        <h3 class="job-title">Scrum Leader - Tiger Chow</h3>
+        <p class="jobs">
+          Clemson, South Carolina | January 2023<br />
+          • Led a cross-functional team to develop a food delivery app using Agile methodologies.<br />
+          • Managed sprints, resolved conflicts, and adapted to stakeholder requirements.<br />
+          • Used AWS and Postman for scalable deployment and API testing.<br />
+        </p>
+
         <h3 class="job-title">Recreational Officer</h3>
         <p class="jobs">
-          May 2022 – August 2022<br />
-          City of Poway, San Diego, California<br />
+          City of Poway, San Diego, California | May 2022 – August 2022<br />
           • Provided tech-savvy support by handling phone inquiries and addressing guest questions.<br />
-          • Orchestrated club events with a keen eye for detail and demonstration of leadership.<br />
-          • Managed Park operations, including opening, closing, and cleaning park facilities.<br />
-          • Exemplified responsibility by efficiently resolving tech-related issues and maintaining a pristine department area.<br />
-          <br />
+          • Orchestrated events with attention to detail and leadership.<br />
+          • Managed park operations, including opening, closing, and cleaning facilities.<br />
         </p>
 
         <h3 class="job-title">Server</h3>
         <p class="jobs">
-          May 2023 – August 2023<br />
-          Clarks Inn, Santee, South Carolina<br />
-          • Efficiently managed customer orders using digital systems. <br />
-          • Prepared culinary delights, such as soups, salads, and dressings.<br />
-          • Engaged with guests, ensuring their satisfaction, and addressing inquiries promptly.<br />
-          • Demonstrated adaptability by answering any questions the customers had.<br />
+          Clarks Inn, Santee, South Carolina | May 2023 – August 2023<br />
+          • Efficiently managed customer orders using digital systems.<br />
+          • Engaged with guests to ensure satisfaction and addressed inquiries promptly.<br />
+          • Adapted to changing customer needs with effective communication.<br />
         </p>
       </div>
 
       <div class="club-experience">
         <h2>Clubs</h2>
         <p class="clubs">
-          • Clemson Rugby<br /><br /><br />
-          • CU Cyber<br /><br /><br />
-          • Clemson Build<br /><br /><br />
+          • CU Cyber - Ethical hacking, network security, and data protection.<br />
+          • Clemson Rugby - Active participation in matches and team-building activities.<br />
+          • Clemson Build - Entrepreneurship and innovative business idea development.<br />
         </p>
       </div>
     </div>
-
   </body>
 </html>
