--- a/projects.html
+++ b/projects.html
@@ -20,17 +20,17 @@
     </div>
 
     <p class="home">
-      <a class="home-link" href="./index.html">Home</a>
+      <a class="home-link" href="/index.html">Home</a>
     </p>
 
     <p class="projects">
-      <a class="projects-link" href="./projects.html"
+      <a class="projects-link" href="/projects.html"
         >Projects</a
       >
     </p>
 
     <p class="experience">
-      <a class="experience-link" href="./experience.html"
+      <a class="experience-link" href="/experience.html"
         >Experience</a
       >
     </p>
