Fixed the linkedin link

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ By navigating this website, you'll gain a clear understanding of my dedication t
     </p>
 
     <p class="linkedin">
-      <a class="linkedin-link" href="www.linkedin.com/in/colby-kopacz"
+      <a class="linkedin-link" href="http://www.linkedin.com/in/colby-kopacz"
         >Linkedin</a
       >
     </p>
