--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@ By navigating this website, you'll gain a clear understanding of my dedication t
     </div>
 
     <p class="home">
-      <a class="home-link" href="/index.html">Home</a>
+      <a class="home-link" href="index.html">Home</a>
     </p>
 
     <p class="projects">
-      <a class="projects-link" href="/projects.html"
+      <a class="projects-link" href="projects.html"
         >Projects</a
       >
     </p>
 
     <p class="experience">
-      <a class="experience-link" href="/experience.html"
+      <a class="experience-link" href="experience.html"
         >Experience</a
       >
     </p>
