--- a/experience.html
+++ b/experience.html
@@ -10,15 +10,15 @@
     <div class="black-bar"></div>
 
     <p class="home">
-      <a class="home-link" href="/index.html">Home</a>
+      <a class="home-link" href="index.html">Home</a>
     </p>
 
     <p class="projects">
-      <a class="projects-link" href="/projects.html">Projects</a>
+      <a class="projects-link" href="projects.html">Projects</a>
     </p>
 
     <p class="experience">
-      <a class="experience-link" href="/experience.html">Experience</a>
+      <a class="experience-link" href="experience.html">Experience</a>
     </p>
 
     <div class="top-container">
