--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ By navigating this website, you'll gain a clear understanding of my dedication t
     </div>
 
     <p class="home">
-      <a class="home-link" href="index.html">Home</a>
+      <a class="home-link" href="./index.html">Home</a>
     </p>
 
     <p class="projects">
@@ -57,7 +57,7 @@ By navigating this website, you'll gain a clear understanding of my dedication t
     </p>
 
     <p class="experience">
-      <a class="experience-link" href="experience.html"
+      <a class="experience-link" href="/experience.html"
         >Experience</a
       >
     </p>
