--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ By navigating this website, you'll gain a clear understanding of my dedication t
     </p>
 
     <p class="projects">
-      <a class="projects-link" href="Resume-Website/projects.html"
+      <a class="projects-link" href="./projects.html"
         >Projects</a
       >
     </p>
